path to test harness

--- a/html/syntax/parsing/math-parse03.html
+++ b/html/syntax/parsing/math-parse03.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>math in html: parsing</title>
-<script src="../../../resources/testharness.js"></script>
+<script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 </head>
 <body>
