--- a/html/semantics/embedded-content/media-elements/canPlayType_two_implies_one_3.html
+++ b/html/semantics/embedded-content/media-elements/canPlayType_two_implies_one_3.html
@@ -14,12 +14,20 @@
 test(function() {
  var v = document.getElementById("v");
  if (v.canPlayType('video/ogg; codecs="theora, vorbis"') == "maybe") {
-   assert_in_array(v.canPlayType('video/ogg; codecs="theora'), ["maybe", "probably"], "ability to play two codecs implies the ability to play one");
+   assert_in_array(v.canPlayType('video/ogg; codecs="theora"'), ["maybe", "probably"], "ability to play two codecs implies the ability to play one");
  } else if (v.canPlayType('video/ogg; codecs="theora, vorbis"') == "probably") {
    assert_equals(
      v.canPlayType('video/ogg; codecs="theora, vorbis"'),
      v.canPlayType('video/ogg; codecs="theora"'),
-     "ability to play two codecs implies the ability to play one");
+     "ability to play two codecs implies the ability to play one (OGG)");
+ }
+if (v.canPlayType('video/webm;codecs="vp8,vorbis"') == "maybe") {
+   assert_in_array(v.canPlayType('video/webm;codecs="vp8"'), ["maybe", "probably"], "ability to play two codecs implies the ability to play one");
+ } else if (v.canPlayType('video/webm;codecs="vp8,vorbis"') == "probably") {
+   assert_equals(
+     v.canPlayType('video/webm;codecs="vp8,vorbis"'),
+     v.canPlayType('video/webm;codecs="vp8"'),
+     "ability to play two codecs implies the ability to play one (WebM)");
  }
 });
   </script>
