--- a/html/semantics/embedded-content/media-elements/canPlayType_two_implies_one_4.html
+++ b/html/semantics/embedded-content/media-elements/canPlayType_two_implies_one_4.html
@@ -21,6 +21,14 @@ test(function() {
      v.canPlayType('video/ogg; codecs="vorbis"'),
      "ability to play two codecs implies the ability to play one");
  }
+ if (v.canPlayType('video/webm;codecs="vp8,vorbis"') == "maybe") {
+   assert_in_array(v.canPlayType('video/webm;codecs="vorbis"'), ["maybe", "probably"], "ability to play two codecs implies the ability to play one");
+ } else if (v.canPlayType('video/webm;codecs="vp8,vorbis"') == "probably") {
+   assert_equals(
+     v.canPlayType('video/webm;codecs="vp8,vorbis"'),
+     v.canPlayType('video/webm;codecs="vorbis"'),
+     "ability to play two codecs implies the ability to play one (WebM)");
+ }
 });
   </script>
  </body>
