use W3C editor's draft instead

--- a/html/semantics/document-metadata/the-meta-element/encoding.html
+++ b/html/semantics/document-metadata/the-meta-element/encoding.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <title>Character encoding</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
-<link rel=help href="http://whatwg.org/html/#charset">
+<link rel=help href="http://www.w3.org/html/wg/drafts/html/master/document-metadata.html#charset">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=characters>foo&#x263A;bar&#x1F4A9;</div>
