use W3C editor's draft

--- a/html/infrastructure/urls/terminology-0/multiple-base.html
+++ b/html/infrastructure/urls/terminology-0/multiple-base.html
@@ -6,8 +6,8 @@
 <base href="http://www.example.org/">
 <base href="http://www.example.com/">
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
-<link rel="help" href="http://www.w3.org/html/#document-base-url">
-<link rel="help" href="http://www.w3.org/html/#terminology-0">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/master/#document-base-url">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/master/#terminology-0">
 
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
