--- a/html/semantics/embedded-content/media-elements/error-codes/error.html
+++ b/html/semantics/embedded-content/media-elements/error-codes/error.html
@@ -34,5 +34,5 @@ function error_test(tagName, src) {
 }
 
 error_test('audio', getAudioURI('/media/sound_5'));
-error_test('video', getVideoURI('/media/movie_5'));
+error_test('video', getVideoURI('/media/white'));
 </script>
