--- a/html/semantics/embedded-content/media-elements/interfaces/TextTrack/activeCues.html
+++ b/html/semantics/embedded-content/media-elements/interfaces/TextTrack/activeCues.html
@@ -99,6 +99,6 @@ test1.step(function(){
         video.play();
         test1.done();
     });
-    video.src = getVideoURI("/media/movie_5");
+    video.src = getVideoURI("/media/white");
 });
 </script>
