--- a/html/semantics/embedded-content/media-elements/ready-states/autoplay.html
+++ b/html/semantics/embedded-content/media-elements/ready-states/autoplay.html
@@ -68,5 +68,5 @@ function autoplay_test(tagName, src) {
 }
 
 autoplay_test('audio', getAudioURI('/media/sound_5'));
-autoplay_test('video', getVideoURI('/media/movie_5'));
+autoplay_test('video', getVideoURI('/media/white'));
 </script>
