--- a/html/semantics/embedded-content/media-elements/video_007.htm
+++ b/html/semantics/embedded-content/media-elements/video_007.htm
@@ -40,7 +40,7 @@ function do_seeked(event)
 
 <script>
 document.write(
-  "<video id='video0' src='" + getVideoURI("/media/movie_5") + "'" +
+  "<video id='video0' src='" + getVideoURI("/media/white") + "'" +
   " onseeked='do_seeked(event);'" +
   " onplay='do_play(event);'" +
   " autoplay>" +
