--- a/html/semantics/embedded-content/media-elements/video_loop_base.html
+++ b/html/semantics/embedded-content/media-elements/video_loop_base.html
@@ -34,7 +34,7 @@
 
         media.addEventListener("seeking", startTest, false);
         media.loop = true;
-        media.src = getVideoURI("/media/movie_5") + "?" + new Date() + Math.random();
+        media.src = getVideoURI("/media/white") + "?" + new Date() + Math.random();
         media.play();
     </script>
   </body>
