--- a/html/semantics/embedded-content/media-elements/seeking/seek-to-currentTime.html
+++ b/html/semantics/embedded-content/media-elements/seeking/seek-to-currentTime.html
@@ -7,7 +7,7 @@
 <script>
 async_test(function(t) {
   var v = document.createElement('video');
-  v.src = getVideoURI('/media/movie_5');
+  v.src = getVideoURI('/media/white');
   v.onloadedmetadata = t.step_func(function() {
     assert_greater_than(v.readyState, v.HAVE_NOTHING);
     assert_greater_than(v.seekable.length, 0);
