--- a/html/semantics/embedded-content/media-elements/video_loop_current_media_controller-manual.html
+++ b/html/semantics/embedded-content/media-elements/video_loop_current_media_controller-manual.html
@@ -16,7 +16,7 @@
         var controller = new MediaController();
 
         media.controller = controller;
-        media.src = getVideoURI("/media/movie_5") + "?" + new Date() + Math.random();
+        media.src = getVideoURI("/media/white") + "?" + new Date() + Math.random();
         media.play();
     </script>
   </body>
