--- a/pointerevents/pointerevent_touch-action-inherit_child-none_touch.html
+++ b/pointerevents/pointerevent_touch-action-inherit_child-none_touch.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>touch-action: clild: none</title>
+        <title>touch-action: child: none</title>
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="pointerevent_styles.css">
         <script src="http://w3c-test.org/resources/testharness.js"></script>
@@ -15,14 +15,15 @@
     <body onload="run()">
         <h1>Pointer Events touch-action attribute support</h1>
         <h4 id="desc">Test Description: Try to scroll text DOWN. Wait for description update. Expected: no panning</h4>
-        <p>Note: this test is for touch-devices only
-        <p>
+        <p>Note: this test is for touch-devices only</p>
         <div class="scroller" id="target0">
             <div>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
-                lobortis nisl ut aliquip ex ea commodo consequat.
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    lobortis nisl ut aliquip ex ea commodo consequat.
+                </p>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Lorem ipsum dolor sit amet...</p>
