--- a/pointerevents/pointerevent_touch-action-mouse.html
+++ b/pointerevents/pointerevent_touch-action-mouse.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>touch-action: illegal values</title>
+        <title>touch-action: mouse</title>
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="pointerevent_styles.css">
         <script src="http://w3c-test.org/resources/testharness.js"></script>
@@ -16,8 +16,8 @@
     </head>
     <body onload="run()">
         <h1>Pointer Events touch-action attribute support</h1>
-        <h4 id="desc">Test Description: </h4>
-        <p>
+        <h4 id="desc">Test Description: Try to scroll text down using mouse (use mouse wheel or click on the scrollbar). Wait for description update.</h4>
+        <p>Note: this test is for mouse only</p>
         <div id="target0">
             <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
