--- a/pointerevents/pointerevent_lostpointercapture_is_first.html
+++ b/pointerevents/pointerevent_lostpointercapture_is_first.html
@@ -69,7 +69,7 @@
             	pointeroutReceived = false;
             	pointermoveReceived = false;
             	pointerdownReceived = false;
-            	pointerupReceived = 0;
+            	pointerupReceived = false;
             	pointerleaveReceived = false;
             	pointerenterReceived = false;			
             });
@@ -85,7 +85,7 @@
             		assert_true((pointeroverReceived == false)&&
             		(pointeroutReceived == false)&&
             		(pointerdownReceived == false)&&
-            		(pointerupReceived == 0)&&
+            		(pointerupReceived == false)&&
             		(pointermoveReceived ==false)&&
             		(pointerenterReceived == false)&&
             		(pointerleaveReceived == false)
@@ -120,7 +120,7 @@
             
             on_event(target0, "pointerup", function (event) {
             	if(testStarted == true) {
-            		pointerupReceived++;
+            		pointerupReceived = true;
             	}
             	testStarted = true;
             });
