--- a/pointerevents/pointerevent_touch-action-auto-css_touch.html
+++ b/pointerevents/pointerevent_touch-action-auto-css_touch.html
@@ -17,8 +17,7 @@
     <body onload="run()">
         <h1>Pointer Events touch-action attribute support</h1>
         <h4 id="desc">Test Description: Try to scroll text DOWN. Wait for description update. Expected: pan enabled</h4>
-        <p>Note: this test is for touch-devices only
-        <p>
+        <p>Note: this test is for touch-devices only</p>
         <div id="target0">
             <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
