--- a/pointerevents/pointerevent_touch-action-pan-x-pan-y-pan-y_touch.html
+++ b/pointerevents/pointerevent_touch-action-pan-x-pan-y-pan-y_touch.html
@@ -18,8 +18,7 @@
     <body onload="run()">
         <h1>Pointer Events touch-action attribute support</h1>
         <h4 id="desc">Test Description: Try to scroll text DOWN. Wait for description update. Expected: no panning/zooming/etc.</h4>
-        <p>Note: this test is for touch-devices only
-        <p>
+        <p>Note: this test is for touch-devices only</p>
         <div class="scroller" id="target0">
             <div>
                 <div>
