--- a/html/semantics/forms/the-input-element/hidden.html
+++ b/html/semantics/forms/the-input-element/hidden.html
@@ -64,7 +64,11 @@
         var el = document.getElementById("hidden");
         assert_throws("InvalidStateError", function() { el.stepUp(); }, "");
       }, "stepUp does not apply for hidden");
-
+    
+    test(function(){
+      var el = document.getElementById("hidden");
+      assert_false(el.willValidate);
+    }, "input type=hidden is barred from constraint validation");
   </script>
   </body>
 </html>
