fix test for invalid value

--- a/html/semantics/forms/the-form-element/form-autocomplete.html
+++ b/html/semantics/forms/the-form-element/form-autocomplete.html
@@ -40,5 +40,5 @@
   autocompletetest(document.forms.missing_attribute, ["on", "on", "on", "off"], "form autocomplete attribute missing");
   autocompletetest(document.forms.autocomplete_on, ["on", "on", "on", "off"], "form autocomplete attribute on");
   autocompletetest(document.forms.autocomplete_off, ["off", "off", "on", "off"], "form autocomplete attribute off");
-  autocompletetest(document.forms.autocomplete_invalid, ["", "", "on", "off"], "form autocomplete attribute invalid");
+  autocompletetest(document.forms.autocomplete_invalid, ["on", "on", "on", "off"], "form autocomplete attribute invalid");
 </script>
