--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/inset/shape-outside-inset-013.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/inset/shape-outside-inset-013.html
@@ -20,7 +20,7 @@
             height: 200px;
             font-family: Ahem;
             font-size: 25px;
-            background-color: rexxd;
+            background-color: red;
             color: green;
         }
         #test-shape {
