change to generic title prefix

--- a/contributors/adobe/submitted/cssom-view/cssom-view-img-attributes-001.html
+++ b/contributors/adobe/submitted/cssom-view/cssom-view-img-attributes-001.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSSOM-View: HTMLImageElement x and y attributes</title>
+        <title>CSS Test: HTMLImageElement x and y attributes</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Alan Stearns" href="mailto:stearns@adobe.com">
         <link rel="reviewer" title="" href="">
