--- a/html/infrastructure/urls/terminology-0/multiple-base.html
+++ b/html/infrastructure/urls/terminology-0/multiple-base.html
@@ -6,15 +6,12 @@
 <base href="http://www.example.org/">
 <base href="http://www.example.com/">
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
-<link rel="help" href="http://www.w3.org/html/wg/drafts/html/master/#document-base-url">
-<link rel="help" href="http://www.w3.org/html/wg/drafts/html/master/#terminology-0">
-
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
 <script>
   test(function(){
     var base = document.querySelectorAll("base");
-    assert_equals(document.baseURI, base[1].href);
+    assert_equals(document.baseURI, document.querySelectorAll("base[href]")[0].href);
   }, "If there are multiple <base> elements, the document base URL is the frozen base URL of the first one that has an href attribute");
 </script>
