Remove trailing argument copypasta

--- a/html/semantics/embedded-content/media-elements/mime-types/canPlayType.html
+++ b/html/semantics/embedded-content/media-elements/mime-types/canPlayType.html
@@ -42,7 +42,7 @@ test(function() {
 test(function() {
   t('video/x-new-fictional-format', '');
   t('video/x-new-fictional-format;codecs="kittens,bunnies"', '');
-}, 'video/x-new-fictional-format', '');
+}, 'video/x-new-fictional-format');
 
 function type_codecs_test(type, audioCodecs, videoCodecs) {
   var typeSupported = false;
