Remove div style from page load timeouts test html test page.

--- a/webdriver/timeouts/res/page_load_timeouts_tests.html
+++ b/webdriver/timeouts/res/page_load_timeouts_tests.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Page Load Timeouts Test</h1>
-    <div style="text-indent:80%">
+    <div>
         <a href="page_load_timeouts_result_page.html" id="multilinelink">Click Test Link</a>
     </div>
 </body>
