--- a/html/semantics/forms/attributes-common-to-form-controls/dirname-ltr.html
+++ b/html/semantics/forms/attributes-common-to-form-controls/dirname-ltr.html
@@ -10,12 +10,12 @@
   <p><label>Comment: <input type=text name="comment" dirname="comment.dir" required></label></p>
   <p><button type=submit>Post Comment</button></p>
 </form>
-<iframe name="iframe" id="iframe" src="dirname-ltr-iframe.html"></iframe>
+<iframe name="iframe"></iframe>
 <script>
   function getParameterByName(name) {
     name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
     var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-    results = regex.exec(document.getElementById("iframe").contentWindow.location.search);
+    results = regex.exec(document.querySelector("iframe").contentWindow.location.search);
     return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
   }
 
@@ -23,10 +23,7 @@
   document.querySelector("input").value="foobar";
   document.querySelector("button").click();
 
-  setTimeout(function(){
-    t.step(function(){
-      assert_equals(getParameterByName("comment.dir"), "ltr");
-      t.done();
-    });
-  }, 1000);
+  document.querySelector("iframe").onload = t.step_func_done(function() {
+    assert_equals(getParameterByName("comment.dir"), "ltr");
+  });
 </script>
