Remove uneeded test case, since click page loading is undefined.

--- a/webdriver/timeouts/res/page_load_timeouts_tests.html
+++ b/webdriver/timeouts/res/page_load_timeouts_tests.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Page Load Timeouts Test</h1>
     <div>
-        <a href="page_load_timeouts_result_page.html" id="multilinelink">Click Test Link</a>
+        Say Cheese
     </div>
 </body>
 </html>
